--- a/package.json
+++ b/package.json
@@ -19,7 +19,14 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@types/prismjs": "^1.16.0",
+    "angular-admin-lte": "^2.0.1",
+    "angular-loading-page": "^0.6.0",
+    "bootstrap-css-only": "^3.3.7",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
+    "ionicons": "^4.5.8",
+    "prismjs": "^1.16.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
