--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "ionicons": "^4.5.8",
+    "ngx-toastr": "^10.0.4",
     "prismjs": "^1.16.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
