--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "ionicons": "^4.5.8",
+    "ng2-completer": "^2.0.8",
+    "ng2-smart-table": "^1.4.0",
     "ngx-toastr": "^10.0.4",
     "prismjs": "^1.16.0",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
