--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "ionicons": "^4.5.8",
-    "ng2-completer": "^2.0.8",
-    "ng2-smart-table": "^1.4.0",
+    "ng-zorro-antd": "^7.3.3",
     "ngx-toastr": "^10.0.4",
     "prismjs": "^1.16.0",
     "rxjs": "~6.3.3",
