--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@types/lodash": "^4.14.134",
     "@types/prismjs": "^1.16.0",
     "angular-admin-lte": "^2.0.1",
     "angular-loading-page": "^0.6.0",
