--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@types/file-saver": "^2.0.1",
     "@types/lodash": "^4.14.134",
     "@types/prismjs": "^1.16.0",
     "angular-admin-lte": "^2.0.1",
@@ -26,6 +27,7 @@
     "bootstrap": "4.2.1",
     "bootstrap-css-only": "^3.3.7",
     "core-js": "^2.5.4",
+    "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
     "ionicons": "^4.5.8",
     "ng-zorro-antd": "^7.3.3",
