--- a/package.json
+++ b/package.json
@@ -19,17 +19,22 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@swimlane/ngx-charts": "^12.0.1",
+    "@types/d3-shape": "^1.3.1",
     "@types/file-saver": "^2.0.1",
     "@types/lodash": "^4.14.134",
     "@types/prismjs": "^1.16.0",
     "angular-admin-lte": "^2.0.1",
+    "angular-fusioncharts": "^3.0.2",
     "angular-loading-page": "^0.6.0",
     "bootstrap": "4.2.1",
     "bootstrap-css-only": "^3.3.7",
     "core-js": "^2.5.4",
     "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
+    "fusioncharts": "^3.13.5-sr.1",
     "ionicons": "^4.5.8",
+    "moment": "^2.24.0",
     "ng-zorro-antd": "^7.3.3",
     "ngx-bootstrap": "^4.1.1",
     "ngx-socket-io": "^2.1.1",
