--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@swimlane/ngx-charts": "^12.0.1",
     "@types/d3-shape": "^1.3.1",
     "@types/file-saver": "^2.0.1",
+    "@types/is-number": "^7.0.0",
     "@types/lodash": "^4.14.134",
     "@types/prismjs": "^1.16.0",
     "angular-admin-lte": "^2.0.1",
@@ -37,6 +38,7 @@
     "moment": "^2.24.0",
     "ng-zorro-antd": "^7.3.3",
     "ngx-bootstrap": "^4.1.1",
+    "ngx-numeric-textbox": "^6.0.0",
     "ngx-socket-io": "^2.1.1",
     "ngx-toastr": "^10.0.4",
     "prismjs": "^1.16.0",
