--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ng-zorro-antd": "^7.3.3",
     "ngx-bootstrap": "^4.1.1",
     "ngx-numeric-textbox": "^6.0.0",
+    "ngx-permissions": "^7.0.3",
     "ngx-socket-io": "^2.1.1",
     "ngx-toastr": "^10.0.4",
     "prismjs": "^1.16.0",
